--- a/src/main/resources/static/log.html
+++ b/src/main/resources/static/log.html
@@ -78,7 +78,7 @@
 
       if (username === "Börny" && password === "1234") {
         alert("Login erfolgreich!");
-        window.location.href = "/eintrag";
+        window.location.href = "/startseite.html";
         return true;
       } else {
         alert("falscher Benutzername oder Passwort!");
