Es können im Klassenbuch nun Einträge vorgenommen werden Links in der Navbar hinterlegt um im Klassenbuch navigieren zu können

--- a/src/main/resources/static/startseite.html
+++ b/src/main/resources/static/startseite.html
@@ -5,16 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Glassmorphism button</title>
+  <title>Startseite</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-<!-- Buttons brauchen noch Links zu den entsprechenden Seiten -->
 <div class="container">
-  <div class="btn"><a th:href="#">Eintrag hinzufügen</a></div>
-  <div class="btn"><a th:href="@{/eintrag}">Teilnehmer anzeigen</a></div>
-  <div class="btn"><a th:href="@{/dozent}">Dozenten anzeigen</a></div>
+  <div class="btn"><a href="/wochentag">Eintrag hinzufügen</a></div>
+  <div class="btn"><a href="/eintrag">Teilnehmer anzeigen</a></div>
+  <div class="btn"><a href="/dozent">Dozenten anzeigen</a></div>
 </div>
 </body>
 </html>
