--- a/src/main/resources/static/startseite.html
+++ b/src/main/resources/static/startseite.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div>
+  <!--<header> Abchecken</header> -->
+</div>
+</body>
+<body>
 <div class="container">
   <div class="btn"><a href="/wochentag">Eintrag hinzufügen</a></div>
   <div class="btn"><a href="/eintrag">Teilnehmer anzeigen</a></div>
