--- a/src/main/resources/static/startseite_teilnehmer.html
+++ b/src/main/resources/static/startseite_teilnehmer.html
@@ -1,4 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&family=Roboto:wght@400;500;700&display=swap");
+<!DOCTYPE html>
+<html lang="de">
+<html xmlns:th="http://www.thymeleaf.org">
+<style>
+  @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&family=Roboto:wght@400;500;700&display=swap");
 
 * {
 	margin: 0;
@@ -133,3 +137,19 @@ body {
 	box-shadow: 0 0 5px #2db2ff, 0 0 15px #2db2ff, 0 0 30px #2db2ff;,
 		0 0 60px #2db2ff;
 }
+
+</style>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Startseite</title>
+</head>
+<body>
+<div class="container">
+  <div class="btn"><a href="/wochentag_teilnehmer">Einträge anzeigen</a></div>
+  <div class="btn"><a href="/eintrag_teilnehmer">Teilnehmer anzeigen</a></div>
+  <div class="btn"><a href="/dozent_teilnehmer">Dozenten anzeigen</a></div>
+</div>
+</body>
+</html>
